<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:weightSum="1"
  android:background="#FFFFFF">
  
   <TextView
            android:layout_width="fill_parent"
            android:gravity="center_vertical"
            android:text="Over SportSquare" android:layout_height="wrap_content"
            android:textColor="#363636"/>
	<TextView
            android:layout_width="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/over_tekst1" android:layout_height="wrap_content"
            android:textColor="#363636"/>
	<TextView
            android:layout_width="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/over_tekst2" android:layout_height="wrap_content" android:textColor="#363636"/>
	<TextView
            android:layout_width="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/over_tekst3" android:layout_height="wrap_content" android:textColor="#363636"/>
	<TextView
            android:layout_width="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/over_tekst4" android:layout_height="wrap_content" android:layout_weight="0.06" android:textColor="#363636"/>
	<TextView
            android:layout_width="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/over_tekst5" android:layout_height="wrap_content" android:layout_weight="0.05" android:textColor="#363636"/>
	<TextView
            android:layout_width="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/over_tekst6" android:layout_height="wrap_content" android:layout_weight="0.06" android:textColor="#363636"/>
	
</LinearLayout>
