<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="350dip"
  android:background="#FFFFFF">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Help"
            android:textColor="#363636"
        />
	<TextView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Mijn Schema"
            android:textColor="#363636"
        />
		<TextView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:gravity="center_vertical"
            android:text="@string/help_tekst_schema"
            android:textColor="#363636" android:layout_weight="1.00" android:textSize="10dip"/>
            
		<TextView android:textColor="#363636" android:layout_height="0dip" android:gravity="center_vertical" android:layout_width="fill_parent" android:text="Zalen" android:layout_weight="0.73"></TextView>
        	<TextView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:gravity="center_vertical"
            android:text="@string/help_tekst_zalen"
            android:textColor="#363636" android:layout_weight="2" android:textSize="10dip"/>
        	<TextView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Mijn Vrienden"
            android:textColor="#363636"
        />  
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/help_tekst_vrienden"
            android:textSize="10dip"
            android:textColor="#363636"
		/>    
</LinearLayout>
